<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Othello</string>
    <string name="app_name">Othello</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="instruction">Instruction</string>
    <string name="playerDarkText">Dark</string>
    <string name="playerLightText">Light</string>
    <string name="instructionTitle">GAME INSTRUCTION</string>
    <string name="introductionText1">This game has two players competing as elements, a board (called Othelleria) of size 8x8 pieces of uniform color and shape of discs with the two faces of opposite colors, one dark and one light. For each player is assigned one of these two colors.
Players play in turn and every single move consists of placing a disc of his color, and has as effect the reversal of one or more pieces of the opponent, so became of the color of the current player. The goal is to have at the end of the game, the majority of pawns on the chessboard of your color.</string>
    <string name="introductionText2">The initial configuration provides for the positioning of four disks, two for color at the center of the board, so as to form an X as reported in the following image.</string><string name="howToPlayTitle">HOW TO PLAY</string>
    <string name="rulesText_1">1. The dark player moves first.</string>
    <string name="rulesText_2">2. Each player places one disc per turn.</string>
    <string name="rulesText_3">3. A disc can only be placed in an empty box.</string>
    <string name="rulesText_4">4. Once a disk is placed can not be moved or removed, but only reversed.</string>
    <string name="rulesText_5">5. The positioning of a disc of a certain color has the effect of reversing all the disks that form along any of the 8 verse, a continuous path of the opposite color that starts from a position next to that of the disc placed and which is directly below by a disc of the same color.</string>
    <string name="rulesText_6">6. Not all moves are allowed, but only the legal ones. A move is legal only if it causes the reversal of minimum one disc of the opponent.</string>
    <string name="rulesText_7">7. If during a player turn is unable to make any legal move, pass the turn without making any moves. If instead it is practicable at least one move, the player is obliged to do it.</string>
    <string name="rulesText_8">8. Discs can be reversed only if accompanied by disk placed during the current move.</string>
    <string name="rulesText_9">The game ends when none of the players can do any legal move. The counting of the discs on the board determine the player to win.</string>
    <string name="minmaxText">Min-Max Algorithm</string>
    <string name="alphabetaText">Alpha-Beta Algorithm</string>
    <string name="cancel">Cancel</string>
    <string name="player_device">Player vs Device</string>
    <string name="device_device">Device vs Device</string>
    <string name="uno">1</string>
    <string name="due">2</string>
    <string name="tre">3</string>
    <string name="quattro">4</string>
    <string name="cinque">5</string>
    <string name="sei">6</string>
    <string name="sette">7</string>
    <string name="otto">8</string>
    <string name="nove">9</string>
    <string name="dieci">10</string>
    

</resources>