<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical" 
        android:padding="10dp">

        <RadioButton
            android:id="@+id/radioMinmaxAlgorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minmaxText" />

        <RadioButton
            android:id="@+id/radioAlphabetaAlgorithm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetaText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                android:id="@+id/bntCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/bntPlayChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>